2003-03-06 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * src/gdcmHeader.h and gdcmHeader.cxx Coding style + doxigenation.
      * src/gdcm.h general comments moved to TODO, and README
      * src/gdcm.h should now be seen as a user commodity (including it
        should suffice to fully use gdcm). It is nowhere including within
        any of the kernel files src/*.cxx and src/*.h.

2003-03-05 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * src/gdcm.h splitted in gdcmCommon.h, gdcmDict.h, gdcmDictEntry.h,
        gdcmDictSet.h, gdcmElValSet.h, gdcmElValue.h, gdcmFile.h,
        gdcmHeader.h
      * src/gdcm*.cxx only include their corresponding include file
        (as opposed to gdcm.h)
      * gdcmPython/gdcm.i changed accordingly
      * Test/Makefile.am corrected and added NEWS, AUTHORS in order for
        the autogen.sh generated "make snapshot" command to work.
      * autogen.sh removed history related references to crea package.

2003-03-04 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * distutilsSwigCPlusPlus.py work around some swig portability
        bug.

2003-03-03 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * Eventually, python/gdcmPython was renamed to gdcmPython. This
        was done in a last ditch attempt to get setup.py _really_
        operationnal. The python/gdcmPython layaout add the advantage
        of hidding away the python related distutils specific files
        (MANIFEST.in, setup.py, distutils*.py...) from the main directory.
        Alas, the src directory was out of scope (i.e. it's relative
        position to setup.py was ../src) which made things impossible to
        handle (see previous version of python/setup.py). Crossing fingers...

2003-02-20 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * python/setup.py now works on Un*x. (harder than I thougth)
      * python/distutilsSwigCPlusPlus.py can now have include files
        among the list of sources.
      